syntax = "proto3";

package account.v2;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/VivianRMS/go-ecommerce-micro/account/gen/go/account/v2;pb";

enum AccountType {
  ACCOUNT_TYPE_UNSPECIFIED = 0;
  ACCOUNT_TYPE_PERSONAL = 1;
  ACCOUNT_TYPE_BUSINESS = 2;
}

message Account {
  string id = 1;
  string name = 2;
  AccountType type = 3;
  google.protobuf.Timestamp created_at = 4;
  optional string email = 5;
}

message PostAccountRequest {
  string name = 1;
  AccountType type = 2;
  optional string email = 3;
}

message PostAccountResponse {
  Account account = 1;
}

message GetAccountRequest {
  string id = 1;
}

message GetAccountResponse {
  Account account = 1;
}

message GetAccountsRequest {
  uint64 skip = 1;
  uint64 take = 2;
}

message GetAccountsResponse {
  repeated Account accounts = 1;
}

message ListAccountsRequest {
  uint64 page = 1;
  uint64 page_size = 2;
}

message ListAccountsResponse {
  repeated Account accounts = 1;
  uint64 total = 2;
}

service AccountService {
  rpc PostAccount (PostAccountRequest) returns (PostAccountResponse) {}
  rpc GetAccount (GetAccountRequest) returns (GetAccountResponse) {}
  rpc GetAccounts (GetAccountsRequest) returns (GetAccountsResponse) {}
  rpc ListAccounts (ListAccountsRequest) returns (ListAccountsResponse) {}
}