syntax = "proto3";

package order.v1;

option go_package = "github.com/VivianRMS/go-ecommerce-micro/order/gen/go/order/v1;pb";

message Order {
  message OrderProduct {
    string id = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    uint32 quantity = 5;
  }

  string id = 1;
  bytes created_at = 2;
  string account_id = 3;
  double total_price = 4;
  repeated OrderProduct products = 5;
}

message PostOrderRequest {
  message OrderProduct {
    string product_id = 2;
    uint32 quantity = 3;
  }
  string account_id = 2;
  repeated OrderProduct products = 4;
}

message PostOrderResponse {
  Order order = 1;
}

message GetOrderRequest {
  string id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message GetOrdersForAccountRequest {
  string account_id = 1;
}

message GetOrdersForAccountResponse {
  repeated Order orders = 1;
}

service OrderService {
  rpc PostOrder(PostOrderRequest) returns (PostOrderResponse);
  rpc GetOrdersForAccount (GetOrdersForAccountRequest) returns (GetOrdersForAccountResponse);
}